# nimitz

./: .gitignore  PR_DESCRIPTION.md  QUICKSTART_VLLM.md  README.md  ROADMAP.md  SETUP_COMPLETO_VLLM.md  WORKFLOW_SUMMARY.md  analyze_quantitative.py  create_deck_step1.py  informatici.txt  informatici_cards_analysis.json  preview_informatici.html  pyproject.toml  requirements.txt  setup.py  setup_vllm_leitha.sh  test_descriptions.txt  test_llm_filter.py  test_vllm_leitha.py  test_wizard_iterativo.sh  test_wizard_quantitativo.sh  vocabolario_informatici.json  vocabolario_informatici_game.json  vocabolario_iterativo.json  vocabolario_quantitativo.json
.github/workflows/: tests.yml
baseball_cards_final/: cards.csv
baseball_cards_output/: retrieval_metadata.json
docs/: VLLM_SETUP.md
informatici_cards/: retrieval_metadata.json
informatici_cards/nimitz_output/: cards.csv
notebooks/: exmples.py  simple.py
src/: cli.py  cluster.py  core.py  deck.py  embed.py  gaming.py  image_card.py  image_retrieval.py  llm_analyzer.py  main.py  pdf_export.py  quantitative_scoring.py  viz.py  vocabulary_wizard.py  web_discovery.py
tests/: __init__.py  conftest.py  test_deck.py  test_gaming.py  test_pdf_export.py
